--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "start": "cross-env TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack-dev-server --config=build/webpack.config.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,10 +17,12 @@
   "homepage": "https://github.com/dazejs/docs#readme",
   "devDependencies": {
     "@types/webpack": "^4.41.6",
+    "@types/webpack-dev-server": "^3.10.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "autoprefixer": "^9.7.4",
     "babel-plugin-import": "^1.13.0",
+    "cross-env": "^7.0.0",
     "eslint": "^6.8.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -27,10 +30,12 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
