--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
-    "preserveSymlinks": true
+    "preserveSymlinks": true,
+    "jsx": "react"
   },
   "include": [
     "src/**.ts", "src/index.tsx",
