--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "start": "cross-env TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack-dev-server --config=build/webpack.config.ts",
+    "start": "cross-env NODE_ENV=development TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack-dev-server --config=build/webpack.config.ts",
+    "build": "cross-env NODE_ENV=production TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack --config=build/webpack.config.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,20 +17,34 @@
   },
   "homepage": "https://github.com/dazejs/docs#readme",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/html-webpack-plugin": "^3.2.2",
+    "@types/react": "^16.9.22",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/webpack": "^4.41.6",
     "@types/webpack-dev-server": "^3.10.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^7.0.0",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "file-loader": "^5.1.0",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.1.3",
+    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
@@ -38,11 +53,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
     "antd": "^3.26.11",
-    "babel-loader": "^8.0.6"
+    "normalize.css": "^8.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
