--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/highlight.js": "^9.12.3",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "antd": "^3.26.11",
+    "highlight.js": "^9.18.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
