--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/dazejs/docs#readme",
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/highlight.js": "^9.12.3",
     "@types/html-webpack-plugin": "^3.2.2",
+    "@types/marked": "^0.7.2",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
@@ -44,6 +46,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "raw-loader": "^4.0.0",
     "style-loader": "^1.1.3",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
@@ -54,8 +57,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "antd": "^3.26.11",
+    "core-js": "^3.6.4",
     "highlight.js": "^9.18.1",
+    "marked": "^0.8.0",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
