--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/dazejs/docs/issues"
   },
-  "homepage": "https://github.com/dazejs/docs#readme",
+  "homepage": "https://dazejs.org",
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
