--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "start": "cross-env NODE_ENV=development TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack-dev-server --config=build/webpack.config.ts",
-    "build": "npm run clean && cross-env NODE_ENV=production TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack --config=build/webpack.config.ts"
+    "build": "npm run clean && npm run copy && cross-env NODE_ENV=production TS_NODE_PROJECT=\"build/tsconfig-for-webpack-config.json\" webpack --config=build/webpack.config.ts",
+    "copy": "copyfiles CNAME dist"
   },
   "repository": {
     "type": "git",
