--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/highlight.js": "^9.12.3",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/marked": "^0.7.2",
+    "@types/qs": "^6.9.1",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
@@ -66,6 +67,7 @@
     "highlight.js": "^9.18.1",
     "marked": "^0.8.0",
     "normalize.css": "^8.0.1",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
