--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/qs": "^6.9.1",
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
+    "@types/react-loadable": "^5.5.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/webpack": "^4.41.6",
     "@types/webpack-dev-server": "^3.10.0",
@@ -70,6 +71,7 @@
     "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2"
   }
 }
