--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@types/react-loadable": "^5.5.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/webpack": "^4.41.6",
+    "@types/webpack-bundle-analyzer": "^2.13.3",
     "@types/webpack-dev-server": "^3.10.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "copyfiles": "^2.2.0",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
@@ -58,11 +60,11 @@
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.8.4",
     "antd": "^3.26.11",
     "core-js": "^3.6.4",
     "highlight.js": "^9.18.1",
