--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
 
-    - name: Build and Deploy
+    - name: Build and Deploy Github Pages
       uses: JamesIves/github-pages-deploy-action@master
       env:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages
         FOLDER: dist
         BUILD_SCRIPT: npm install && npm run build
+    - name: Deploy to CDN source station
+      run: |
+        echo ${{ secrets.ZEWAIL_KEY }} > ./rsa_id
+        chmod ./rsa_id 400
+        sh scripts/rsa.sh
+        sh scripts/transport.sh
