--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Deploy to CDN source station
       run: |
         echo "${{ secrets.ZEWAIL_KEY }}" > ./id_rsa
-        chmod ./id_rsa 400
+        chmod 400 ./id_rsa 
         mkdir -p ~/.ssh
         rm -f ~/.ssh/known_hosts
         ssh-keyscan -t rsa 111.229.3.72 >> ~/.ssh/known_hosts
