--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
         mkdir -p ~/.ssh
         rm -f ~/.ssh/known_hosts
         ssh-keyscan -t rsa 111.229.3.72 >> ~/.ssh/known_hosts
-        tar -czvf ./assets.tar.gz ./dist
+        tar -czvf ./assets.tar.gz -C ./dist/assets .
         scp -i ./id_rsa ./assets.tar.gz root@111.229.3.72:/home/webroot
         ssh -i ./id_rsa root@111.229.3.72 'cd /home/webroot && tar -xzf assets.tar.gz && rm -f assets.tar.gz && docker restart zewail-nginx'
