--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,21 +9,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+      
+    - name: Install and Build 🔧 Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      run: |
+        npm install
+        npm run build
 
     - name: Build and Deploy Github Pages
-      uses: JamesIves/github-pages-deploy-action@master
+      uses: JamesIves/github-pages-deploy-action@4.1.7
       env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
-        BUILD_SCRIPT: npm install && npm run build
-    - name: Deploy to CDN source station
-      run: |
-        echo "${{ secrets.ZEWAIL_KEY }}" > ./id_rsa
-        chmod 400 ./id_rsa 
-        mkdir -p ~/.ssh
-        rm -f ~/.ssh/known_hosts
-        ssh-keyscan -t rsa 111.229.3.72 >> ~/.ssh/known_hosts
-        tar -czvf ./assets.tar.gz -C ./dist .
-        scp -i ./id_rsa ./assets.tar.gz root@111.229.3.72:/home/webroot
-        ssh -i ./id_rsa root@111.229.3.72 'cd /home/webroot && tar -xzf assets.tar.gz && rm -f assets.tar.gz && docker restart zewail-nginx'
+        token: ${{ secrets.ACCESS_TOKEN }}
+        branch: gh-pages
+        folder: dist
