--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Build and Deploy Github Pages
       uses: JamesIves/github-pages-deploy-action@4.1.7
-      env:
+      with:
         token: ${{ secrets.ACCESS_TOKEN }}
         branch: gh-pages
         folder: dist
