--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,14 +10,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
       
-    - name: Install and Build
-      run: |
-        npm install
-        npm run build
-
     - name: Build and Deploy Github Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.7
-      with:
-        token: ${{ secrets.ACCESS_TOKEN }}
-        branch: gh-pages
-        folder: dist
+      uses: JamesIves/github-pages-deploy-action@releases/v2
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: dist
+        BUILD_SCRIPT: npm install && npm run build
